# Universal-Integration-System

./: AI_LAB_PROPOSAL.md  AI_SELF_ASSESSMENT_PROTOCOL.md  Arquitectura Unificada  BEAL_CONJECTURE_PROOF_963_37.md  BETA_RENORMALIZATION.md  CONSCIOUSNESS_AS_FIELD.md  Coherence-Method.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  KAPPA_PROOF_SUMMARY.md  MASTER_INDEX.md  README universal.md  ROADMAP_PHASES_1_4.md  SELF_VALIDATING_PROOF.md  TECHNICAL_README.md  TEORÍA UNIFICADA  THE_ONE.md  The_Inescapable_Residue.md  UNIVERSAL_CONSTANTS_IN_PHYSICS.md  VILLASMIL_OMEGA_UNIFIED_FRAMEWORK.md  ci.yml  main.py  pyproject.toml  requirements.txt
AI/: AI COHERENCE_CHALLENGE.md  AI_DECLARATIONS COPILOT_DECLARATION.md  AI_GUIDE_COMPLETE_UNDERSTANDING.md
BEAL/: BEAL_CONJECTURE_PROOF_COMPLETE.md  COHERENCE_PRIME_THEOREM.md  Villasmil-Principle-of-Structural-Invariance.md
COHERENCE/: COHERENCIA.md
Consciousness/: CONSCIOUSNESS_AS_FIELD.md  HARD_PROBLEM_DISSOLUTION.md  PHILOSOPHICAL_FOUNDATIONS.md
FINAL/: The Discovery
READNAME/: TECHNICAL_README.md  UNIVERSAL  ethics_boundary.md
Universal Constants/: UNIVERSAL_CONSTANTS_IN_PHYSICS.md
communications/: COLLABORATOR_OUTREACH.md  PRESS_RELEASE_DRAFT.md
consciousness/: consciousness_reminder.md
core/: __init__.py  constants.py  engine.py  greetings.py  logic.md  validator.py
data/: ia_metrics.csv  sample_ia.csv
docs/: 00_START_HERE.md  CONTRIBUTING.md  Final_test  GLOSSARY.md  THE_STRUCTURE_OF_THOUGHT.md  directory_structure.md  philosophy.md  validation
documento/: COHERENCE_LAWS_AI.md  (+2 more)
documento /: maestro
(+103 files in other folders)
